# si-feedback-backend

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: alembic.ini  app.py  config.py
src/alembic/: env.py
src/alembic/versions/: 12838df22a26_feedback_resp_summary.py  3764fe889596_feedback_title.py  48dc691599a4_feedback_tables.py  797f0e0c87a2_users_table.py  b98f952a3456_feedback_session_summary.py
src/core/dependencies/: auth.py  feedback.py
src/core/handlers/: feedback.py
src/core/models/: base.py  feedback_session.py  session.py  user.py
src/core/schemas/: auth.py  base.py  feedback.py  user.py
src/core/utils/: gpt_api.py
src/routers/: ai_assist.py  auth.py  feedback.py  feedback_session.py  users.py
src/tasks/: summary.py
